--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228",
   "scripts": {
     "dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "build": "vitepress build docs",
+    "preview": "vitepress preview docs",
+    "dr": "pnpm build && rsync -avz --delete -e 'ssh -i ~/.ssh/deploy_key_43' docs/.vitepress/dist/ ubuntu@43.136.80.51:/home/ubuntu/y-study/dist"
+  },
+  "dependencies": {
+    "canvas-confetti": "^1.9.3",
+    "sass-embedded": "^1.89.2",
+    "vue": "^3.5.18"
   }
 }
